workloads/drone/deployment-server.yaml
---
# Source: drone/templates/deployment-server.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-server
  labels:
    app: drone
    component: server
spec:
  selector:
    matchLabels:
      app: drone
      component: server
  replicas: 1
  template:
    metadata:
      annotations:
        checksum/secrets: 319c2ba3e43956f43b2a2db75e4fd018e05c90c245dc7275f731bfd2b02dff45
        # prometheus.io/scrape: "true"
        # prometheus.io/port: "8000"
      labels:
        app: drone
        release: "drone"
        component: server
    spec:
      serviceAccountName: drone
      containers:
      - name: server
        image: "docker.io/drone/drone:1.6.1"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        - name: https
          containerPort: 443
          protocol: TCP
        - name: grpc
          containerPort: 9000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        resources:
          {}

        volumeMounts:

        - name: data
          mountPath: /var/lib/drone
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: drone
